# fdiff

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
src/: cli.rs  config.rs  diff.rs  dump.rs  hasher.rs  main.rs  privilege.rs  report.rs  volume.rs  watch.rs
src/mft/: mod.rs  scanner.rs
src/store/: mod.rs  schema.rs  writer.rs
